--- a/views/cancelsession.ejs
+++ b/views/cancelsession.ejs
@@ -10,6 +10,10 @@
   </head>
   <body>
     <%- include("header.ejs") %> 
+    <div class="mt-4">
+      <a href="/home" class="underline text-indigo-700 text-xl mr-1 ml-5">Home</a>
+      <a href="/sport_main/<%= sport_id %>" class="underline text-indigo-700 text-xl"><%= sport_name %></a>
+    </div>
     <div class="flex items-center justify-center mt-40">
       <div class="bg-indigo-100 rounded-lg shadow-lg p-10 mx-auto">
         <h2 class="text-3xl font-bold text-center text-indigo-700 mb-6">Cancel Session</h2>
