--- a/views/editsession.ejs
+++ b/views/editsession.ejs
@@ -10,12 +10,16 @@
   </head>
   <body>
     <%- include("header.ejs") %> 
-    <div class="flex items-center justify-center mt-5">
+    <div class="mt-4">
+      <a href="/home" class="underline text-indigo-700 text-xl mr-2 ml-5">Home</a>
+      <a href="/sport_main/<%= sport_id %>" class="underline text-indigo-700 text-xl"><%= sport_name %></a>
+    </div>
+    <div class="flex items-center justify-center mb-10">
       <div class="bg-indigo-100 rounded-lg shadow-lg p-10">
         <h2 class="text-3xl font-bold text-center text-indigo-700 mb-6">Edit Session Details</h2>
         <form action="/editsession/<%= session_id %>" method="post">
           <input type="hidden" name="_csrf" value="<%= csrfToken %>">
-          <input type="hidden" name="name" value="<%= current_sport_name %>">
+          <input type="hidden" name="name" value="<%= sport_name %>">
           <div class="mb-6">
             <label for="date" class="text-indigo-700">When will this sport session be held?</label>
             <input type="datetime-local" name="date" class="bg-gray-100 text-gray-900 rounded p-2 w-full">
@@ -52,5 +56,6 @@
         </div>
       </div>
     </div>
+
   </body>
 </html>
