--- a/views/editsport.ejs
+++ b/views/editsport.ejs
@@ -10,6 +10,10 @@
   </head>
   <body>
     <%- include("header.ejs") %> 
+    <div style="display: flex;" class="mb-8 mt-4">
+      <a href="/home" class="underline text-indigo-700 text-xl mr-2 ml-5">Home</a>
+      <a href="/sport_main/<%= sport_id %>" class="underline text-indigo-700 text-xl"><%= sport_name %></a>
+    </div>
     <div class="flex items-center justify-center mt-40">
       <div class="bg-indigo-100 rounded-lg shadow-lg p-10">
         <h2 class="text-3xl font-bold text-center text-indigo-700 mb-6">Edit sport</h2>
