--- a/views/previoussession.ejs
+++ b/views/previoussession.ejs
@@ -10,6 +10,12 @@
   <body>
     <%- include("header.ejs") %> 
     <div class="grid grid-cols-7 gap-6 px-4">
+      <div class="col-start-1 col-span-2">
+        <div style="display: flex;" class="mb-8 mt-4">
+          <a href="/home" class="underline text-indigo-700 text-xl mr-2 ml-2">Home</a>
+          <a href="/sport_main/<%= sport.id %>" class="underline text-indigo-700 text-xl"><%= sport.sport_name %></a>
+        </div>
+      </div>
       <div class="col-start-3 col-span-3">
         <div class="flex justify-between items-center">
           <h1 class="text-3xl mb-4 font-bold mt-6 text-indigo-700">Previous <%= sport.sport_name %> Sessions</h1>
