--- a/views/session_main.ejs
+++ b/views/session_main.ejs
@@ -10,13 +10,19 @@
   <body>
     <%- include("header.ejs") %> 
     <div class="grid grid-cols-7 gap-6 px-4">
+      <div class="col-start-1 col-span-2">
+        <div style="display: flex;" class="mb-8 mt-4">
+          <a href="/home" class="underline text-indigo-700 text-xl mr-2 ml-2">Home</a>
+          <a href="/sport_main/<%= sportid %>" class="underline text-indigo-700 text-xl"><%= session_name %></a>
+        </div>
+      </div>
       <div class="col-start-3 col-span-3">
         <div class="flex justify-between items-center">
           <h1 class="text-3xl mb-4 font-bold mt-6 text-indigo-700"><%= session_name %> Session #<%= session_id %></h1>
           <%if (session_creator === userid && flag==0) { %>
             <span>
-              <a href="/editsession/<%= session_id %>" class="mr-10 underline text-indigo-700 text-xl">Edit</a>
-              <a href="/cancelsession/<%= session_id %>/<%= sportid %>" class="underline text-indigo-700 text-xl">Cancel</a>
+              <a href="/editsession/<%= session_id %>/<%= sportid %>/<%= session_name %>" class="mr-10 underline text-indigo-700 text-xl">Edit</a>
+              <a href="/cancelsession/<%= session_id %>/<%= sportid %>/<%= session_name %>" class="underline text-indigo-700 text-xl">Cancel</a>
             </span>
           <% } %>
         </div>
@@ -36,7 +42,13 @@
           <h1 class="text-xl font-bold text-indigo-700 mt-2 mb-2">REASON FOR CANCELLATION :</h1>
           <p class="text-l  text-indigo-900 "><%= session_reason %></p>
         <% } %>
-          
+        <div class="mt-4 text-red-600">
+          <% if(messages && messages.error && messages.error.length > 0)  { %>
+            <% for(var i=0; i<messages.error.length; i++) { %>
+                    <li> <%= messages.error[i] %></li>
+            <% } %>
+          <% } %>
+        </div>
 
 
       </div>
