--- a/views/sport_main.ejs
+++ b/views/sport_main.ejs
@@ -11,12 +11,18 @@
   <body>
     <%- include("header.ejs") %>
     <div class="grid grid-cols-7 gap-6 px-4">
+      <div class="col-start-1 col-span-2">
+        <div style="display: flex;" class="mb-8 mt-4">
+          <a href="/home" class="underline text-indigo-700 text-xl mr-2 ml-2">Home</a>
+        </div>
+      </div>
+
       <div class="col-start-3 col-span-3">
         <div class="flex justify-between items-center">
           <h6 class="py-4 text-3xl font-bold mb-2"><%= current_sport.sport_name %></h6>
           <% if (current_sport.userId == userid) { %>
           <span>
-            <a href="/editsport/<%= current_sport.sport_name %>" class="mr-10 underline text-indigo-700 text-xl">Edit</a>
+            <a href="/editsport/<%= current_sport.sport_name %>/<%= current_sport.id %>" class="mr-10 underline text-indigo-700 text-xl">Edit</a>
             <a href="/deletesport/<%= current_sport.id %>" class="underline text-indigo-700 text-xl">Delete</a>
           </span>
           <% } %>
@@ -34,7 +40,7 @@
        <%- include('sessionslist', {title:"Cancelled Sessions",data: cancelsessions,flag:2, sportid:current_sport.id}) %>
 
         <div style="display: flex;" class="mb-8 mt-4">
-          <a href="/sportsession/<%= current_sport.sport_name %>" class="underline text-indigo-700 text-xl mr-20">Create a new session</a>
+          <a href="/sportsession/<%= current_sport.sport_name %>/<%= current_sport.id %>" class="underline text-indigo-700 text-xl mr-20">Create a new session</a>
           <a href="/previoussession/<%= current_sport.id %>" class="underline text-indigo-700 text-xl">View previous sessions</a>
         </div>
       </div>
