--- a/views/home.ejs
+++ b/views/home.ejs
@@ -4,7 +4,7 @@
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width,initial-scale=1.0" />
-    <meta content="<%= csrfToken %>" name="_csrf">
+    <meta content="<%= csrfToken %>" name="csrf-token">
     <link href="./css/styles.css" rel="stylesheet" />
     <script src="https://cdn.tailwindcss.com"></script>
   </head>
@@ -32,9 +32,7 @@
           <% } else{ %>  
             <%- include('sportslist.ejs', {title:"Created by you",data: usersports,currentuser:currentuser}) %>
             <%- include('sportslist.ejs', {title:"Here are the sports available",data: othersports,currentuser:currentuser}) %>
-         <% } %>
-
-            
+         <% } %>            
         </div>
     </div>
   </body>
