--- a/views/profile.ejs
+++ b/views/profile.ejs
@@ -4,7 +4,7 @@
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width,initial-scale=1.0" />
-    <meta content="<%= csrfToken %>" name="_csrf">
+    <meta content="<%= csrfToken %>" name="csrf-token">
     <link href="/css/styles.css" rel="stylesheet" />
     <script src="https://cdn.tailwindcss.com"></script>
   </head>
@@ -15,7 +15,7 @@
     </div>
     <div class="flex items-center justify-center">
        <div>
-          <h2 class="text-3xl font-bold text-center text-indigo-900 mb-6 mt-6">USER INFO</h2>
+          <h2 class="text-3xl font-bold text-center text-indigo-900 mb-6">USER INFO</h2>
           <form action="/profile" method="post">
             <input type="hidden" name="_csrf" value="<%= csrfToken %>">
             <div class="mb-5">
