--- a/views/sessionslist.ejs
+++ b/views/sessionslist.ejs
@@ -1,5 +1,5 @@
 <div class="mt-5">
-    <% if (data.length > 0) { %>
+    <% if (data && data.length > 0) { %>
         <h1 class="text-2xl text-indigo-700 font-bold mb-4"><%= title %></h1>
         <div class="flex flex-wrap -mx-2">
             <% for (var i = 0; i < data.length; i++) { %>
