--- a/views/sport_main.ejs
+++ b/views/sport_main.ejs
@@ -29,7 +29,7 @@
         </div>
         <h1 class="text-2xl mb-2 font-bold">Sessions</h1>
 
-        <% if(usersessions.length < 1 && othersessions.length < 1){ %>
+        <% if(usesrsessions && usersessions.length < 1 && othersessions.length < 1){ %>
           <p class="text-xl font-bold text-indigo-700 mt-2 mb-2">There are no sessions available to join right now. Create one?</p>
         <% } else{ %>  
           <%- include('sessionslist', {title:"Created by you",data: usersessions, flag:0}) %>
